# latent_failiure_prediction

./: .gitattributes  .gitignore  CONTEXT.md  EXPERIMENT.md  HANDOFF.md  PAPER.tex  README.md
stage1/: .env.example  .gitignore  README.md  pyproject.toml
stage1/config/: criteria.json  defaults.yaml  proxy_defaults.yaml  split.json
stage1/notebooks/: stage1_gpu_colab.ipynb  stage1_proxy_gpu_colab.ipynb
stage1/scripts/: smoke_test.sh
stage1/stage1/common/: chat.py  config.py  hooks.py  paths.py
stage1/stage1/icrl/: boundaries.py  mock_data.py  schema.py
stage1/stage1/icrl_gen/: generate.py  json_utils.py  llm.py  prompts.py  verify.py  wikipedia.py
stage1/stage1/pipeline/: build_axis.py  eval_auroc.py  extract_activations.py  fake_activations.py  run_gate.py  run_proxy_gate.py
stage2/: .gitignore  README.md  pyproject.toml
stage2/config/: defaults.yaml  mini_instances.txt  pilot_instances.txt  proxy_defaults.yaml  swe_agent_qwen.yaml
stage2/data/: smoke_fixtures.json
stage2/data/normalized_test/: sample.json
stage2/notebooks/: mini_agent_colab.ipynb  project_and_analyze_colab.ipynb  serve_qwen_colab.ipynb
stage2/scripts/: run_mini_batch.sh  run_pilot_batch.sh  smoke_test.sh
stage2/stage2/: __init__.py
stage2/stage2/analyze/: final_step.py  noise_by_token_type.py  run_derisk.py  signal_to_noise.py
stage2/stage2/common/: config.py  paths.py  projection.py
stage2/stage2/extract/: mock_projections.py  project_steps.py  token_spans.py
stage2/stage2/mini/: __init__.py  agent_loop.py  catalog.py  evaluate.py  (+3 more)
stage2/tests/: test_mini_catalog.py
(+23 files in other folders)
