[project]
name = "value-axis-stage1"
version = "0.1.0"
description = "Stage 1 value axis reconstruction from ICRL data (Qwen3-8B)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "accelerate>=0.25.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
generate = ["anthropic>=0.40.0", "python-dotenv>=1.0.0"]

[project.scripts]
stage1-gate = "stage1.pipeline.run_gate:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stage1*"]
