[project]
name = "value-axis-stage2"
version = "0.1.0"
description = "Stage 2 SWE-bench trajectory logging and de-risking analyses"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "accelerate>=0.25.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
swe = ["sweagent>=1.0.0"]
mini = ["pytest>=7.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stage2*"]
